# ros2_ws

./: README.md  structure.txt
copilot/: commandes.sh  pixels.txt  prompt.txt
install/: local_setup.sh  setup.sh
install/maestro_node/include/: PololuController.h  ROSMaestroController.h
install/maestro_node/lib/maestro_node/: maestro_node
install/maestro_node/share/maestro_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/maestro_node/share/maestro_node/cmake/: maestro_nodeConfig.cmake
install/maestro_node/share/maestro_node/launch/: gui_control_launch.py
install/my_example_package/share/my_example_package/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_example_package/share/my_example_package/cmake/: my_example_packageConfig.cmake
install/ros_maestro/include/ros_maestro/ros_maestro/msg/: pwm_cmd.hpp  rosidl_generator_c__visibility_control.h
install/ros_maestro/include/ros_maestro/ros_maestro/msg/detail/: pwm_cmd__functions.h  pwm_cmd__rosidl_typesupport_introspection_cpp.hpp  pwm_cmd__traits.hpp  pwm_cmd__type_support.cpp  pwm_cmd__type_support.h
install/ros_maestro/lib/ros_maestro/: relay_driver.py
install/ros_maestro/local/lib/python3.10/dist-packages/ros_maestro/: _ros_maestro_s.ep.rosidl_typesupport_introspection_c.c
install/ros_maestro/local/lib/python3.10/dist-packages/ros_maestro/msg/: __init__.py  _pwm_cmd_s.c
install/ros_maestro/share/ros_maestro/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_maestro/share/ros_maestro/cmake/: export_ros_maestro__rosidl_generator_cExport-noconfig.cmake  export_ros_maestro__rosidl_generator_cExport.cmake  export_ros_maestro__rosidl_generator_pyExport-noconfig.cmake  export_ros_maestro__rosidl_generator_pyExport.cmake  export_ros_maestro__rosidl_typesupport_fastrtps_cExport.cmake  export_ros_maestro__rosidl_typesupport_fastrtps_cppExport.cmake  ros_maestro__rosidl_typesupport_cExport-noconfig.cmake  ros_maestro__rosidl_typesupport_introspection_cExport-noconfig.cmake  ros_maestro__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake
install/ros_maestro/share/ros_maestro/config/: pwmconfig_example.yaml
install/ros_maestro/share/ros_maestro/launch/: erl_launch.py  maestro_launch.py
log/: latest_build
src/gyro_publisher_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/gyro_publisher_package/launch/: gyro_publisher_launch.py
src/gyro_publisher_package/src/: gyro_publisher_node.py
src/maestro_node/: CMakeLists.txt  notes.txt  notes_maestro_node.txt
src/maestro_node/launch/: maestro_launch.py
src/maestro_node/src/: PololuController.cpp  ROSMaestroController.cpp  maestro_node.cpp
src/motor_controller/: CMakeLists.txt  package.xml  setup.py
src/motor_controller/launch/: motor_controller_launch.py
src/motor_controller/src/motor_controller/: motor_controller.py
src/ros2_kinect2/: CMakeLists.txt  package.xml
src/ros_maestro/: CMakeLists.txt  notes_ros_maestro.txt  package.xml  setup.py
src/ros_maestro/include/ros_maestro/: maestro.py  maestro_test.py
src/ros_maestro/launch/: test_launch.py
src/ros_maestro/src/: attopilot_driver.py  maestro_driver.py
test_api_python/: api_chrome.py  api_internet.py  probleme_chatgpt.webm
