<?xml version="1.0"?>
<package format="3">
  <name>motor_controller</name>
  <version>0.0.0</version>
  <description>ROS2 Motor Controller</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros_maestro</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
</package>

