<?xml version="1.0"?>
<package format="3">
  <name>maestro_node</name>
  <version>0.1.0</version>
  <description>The maestro_node package</description>

  <!-- One maintainer tag required, multiple allowed -->
  <maintainer email="raffaello.bonghi@officinerobotiche.it">Raffaello Bonghi</maintainer>

  <!-- One license tag required -->
  <license>Apache-2.0</license>

  <!-- Optional URL tags -->
  <url type="website">http://www.officinerobotiche.it</url>

  <!-- Dependencies -->
  <!-- ament_cmake is required for building ROS2 packages -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>asio</depend>
  <depend>boost</depend>


</package>

